modules/gdscript/tests/scripts/analyzer/errors/access_level_private_func_callable_self.gd
class Foo:
    private func foo():
        pass

class Bar extends Foo:
    func bar():
        var t = self.foo
        t.call()

func test():
    pass
